[package]
name = "crossword"
version = "0.1.0"
authors = ["valen <vbuck@geomar.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
rand="0.7"
smallvec={version = "^1.4", features = ["union", "may_dangle"]}